tests/samples/send-carousel-with-buttons.err
send-carousel-with-buttons.flow:11:Syntax error. "get_rooms *and pick t".
