tests/samples/send-carousel-with-buttons.flow
carousel rooms:
  set title room_name,
  set description room_email,
  set image_url room_picture
  button url('Wizeline', 'http://www.wizeline.com'),
  button postback('Select Option', action:"postback text")
end

flow onboarding do
  call my_integration.get_rooms()
  show rooms using $my_integration.get_rooms and pick title

  -- Reusing the carousel
  call your_integration.get_other_rooms()
  show rooms using $your_integration.get_other_rooms and pick title
done
